//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  email String [not null]
  firstName String [not null]
  lastName String [not null]
  solvedRiddles SolvedRiddle [not null]
  currentRiddle Riddle
  currentRiddleId Int
  createdPlaces Place [not null]
}

Table places {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [not null]
  lat Float [not null]
  lng Float [not null]
  riddlePhotoUrl String [not null]
  solutionPhotoUrl String
  author User [not null]
  authorId String [not null]
  status PlaceStatus [not null, default: 'pending']
  riddle Riddle
}

Table riddles {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  place Place [not null]
  placeId Int [unique, not null]
  solvedRiddles SolvedRiddle [not null]
  currentUsers User [not null]
}

Table solved_riddles {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  riddle Riddle [not null]
  riddleId Int [unique, not null]
  user User [not null]
  userId String [not null]
}

Enum LoginProvider {
  google
}

Enum PlaceStatus {
  pending
  accepted
  rejected
}

Ref: User.currentRiddleId > Riddle.id

Ref: Place.authorId > User.id

Ref: Riddle.placeId - Place.id

Ref: SolvedRiddle.riddleId > Riddle.id

Ref: SolvedRiddle.userId > User.id